--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,11 @@
       <artifactId>deltaspike-core-api</artifactId>
       <version>1.0.0</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.deltaspike.core</groupId>
+      <artifactId>deltaspike-core-impl</artifactId>
+      <version>1.0.0</version>
+    </dependency>
 
 
     <dependency>
@@ -33,6 +38,18 @@
       <groupId>org.apache.openejb</groupId>
       <artifactId>ziplock</artifactId>
       <version>1.7.0-SNAPSHOT</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.jboss.arquillian.junit</groupId>
+      <artifactId>arquillian-junit-container</artifactId>
+      <version>1.1.5.Final</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.11</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
@@ -53,6 +70,10 @@
             <goals>
               <goal>revision</goal>
             </goals>
+            <configuration>
+              <generateGitPropertiesFile>true</generateGitPropertiesFile>
+              <generateGitPropertiesFilename>target/classes/git.properties</generateGitPropertiesFilename>
+            </configuration>
           </execution>
         </executions>
       </plugin>
